Added validation and error messages

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -11,4 +11,6 @@
 
 </form>
 <br><br> -->
+<a routerLinkActive="active" routerLink="/">Home</a>&nbsp;
+<a routerLinkActive="active" routerLink="/monsterreactive">MonsterReactive</a>
 <router-outlet></router-outlet>
